--- a/templates/table.html
+++ b/templates/table.html
@@ -50,10 +50,7 @@
 								{{item[4]}}
 							</div>
 							<div class="cell" data-title="Possesseur">
-								{% for item in item[6].split(',')}
-									{{item}}
-								{% for item in item[7].split(',')}
-									{{item}}
+								{{item[2]}}
 							</div>
 							<div class="cell" data-title="Raffinage">
 								{{item[3]}}
