--- a/templates/table.html
+++ b/templates/table.html
@@ -25,7 +25,7 @@
 	
 	<div class="limiter">
 		<div class="container-table100">
-			<div class="wrap-table100">
+			<div class="container-table100">
 					<div class="table">
 						<div class="row header">
 							<div class="cell">
