--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,9 +1,38 @@
-/*! CSS Used from: Embedded */
+/* The navigation bar */
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+  height: 40px;
+}
+
+/* Links inside the navbar */
+.navbar label {
+  color: #f2f2f2;
+  vertical-align:middle;
+  padding: 14px 16px;
+  margin: 0px;
+  font-weight: bolder;
+  font-family: Fira Sans,sans-serif;
+}
+
+.navbar input {
+  margin-top: 10px;
+}
+
+/* Main content */
+.main {
+  margin-top: 60px; /* Add a top margin to avoid content overlay */
+}
+
  .bodyclass{
 	background-image: url("/static/images/Void.jpg");
 	background-attachment: fixed;
 	background-size: cover;
 	background-repeat: no-repeat;
+	margin: 0px;
  }
  .relicdisplaybar{
     display:-webkit-flex;
